--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "Hexlet project lvl 2",
-  "main": "index.js",
+  "main": "bin/gendiff.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Evgeniy3/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^9.2.0",
+    "lodash": "^4.17.21",
     "make": "^0.0.0"
   },
   "devDependencies": {
