--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   "homepage": "https://github.com/Evgeniy3/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^9.2.0",
+    "fs": "^0.0.1-security",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
-    "make": "^0.0.0"
+    "make": "^0.0.0",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.0"
   }
 }
