--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "commander": "^9.2.0",
     "fs": "^0.0.1-security",
+    "jest-globals": "^0.1.7",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "make": "^0.0.0",
