--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "Hexlet project lvl 2",
-  "main": "bin/gendiff.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest"
   },
